[gd_scene load_steps=24 format=2]

[ext_resource path="res://Zbroja/Spodnie_0.png" type="Texture" id=1]
[ext_resource path="res://Zbroja/Buty_0.png" type="Texture" id=2]
[ext_resource path="res://Zbroja/Spodnie_4.png" type="Texture" id=3]
[ext_resource path="res://Zbroja/Helm_0.png" type="Texture" id=4]
[ext_resource path="res://Armor.gd" type="Script" id=5]
[ext_resource path="res://Zbroja/Helm_1.png" type="Texture" id=6]
[ext_resource path="res://Zbroja/Buty_4.png" type="Texture" id=7]
[ext_resource path="res://Zbroja/Klata_4.png" type="Texture" id=8]
[ext_resource path="res://Hud/FoodRamka.png" type="Texture" id=9]
[ext_resource path="res://Hud/ExitArrowCook.png" type="Texture" id=10]
[ext_resource path="res://Hud/ArmorHUD.png" type="Texture" id=11]
[ext_resource path="res://Zbroja/Helm_4.png" type="Texture" id=12]
[ext_resource path="res://Zbroja/Klata_1.png" type="Texture" id=13]
[ext_resource path="res://Zbroja/Buty_3.png" type="Texture" id=14]
[ext_resource path="res://Zbroja/Spodnie_3.png" type="Texture" id=15]
[ext_resource path="res://Zbroja/Klata_3.png" type="Texture" id=16]
[ext_resource path="res://Zbroja/Helm_3.png" type="Texture" id=17]
[ext_resource path="res://Zbroja/Spodnie_2.png" type="Texture" id=18]
[ext_resource path="res://Zbroja/Buty_1.png" type="Texture" id=19]
[ext_resource path="res://Zbroja/Klata_2.png" type="Texture" id=20]
[ext_resource path="res://Zbroja/Buty_2.png" type="Texture" id=21]
[ext_resource path="res://Zbroja/Spodnie_1.png" type="Texture" id=22]
[ext_resource path="res://Zbroja/Helm_2.png" type="Texture" id=23]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
margin_left = -533.0
margin_top = -250.0
margin_right = 197.0
margin_bottom = 250.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ScrollContainer"]
margin_right = 680.0
margin_bottom = 1616.0
rect_min_size = Vector2( 680, 500 )
__meta__ = {
"_edit_lock_": true
}

[node name="Normalny" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 320.0
rect_min_size = Vector2( 580, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nazwa" type="Label" parent="Background/ScrollContainer/VBoxContainer/Normalny"]
margin_left = 262.747
margin_top = 15.8919
margin_right = 378.747
margin_bottom = 29.8919
text = " Zbroja Typu normalnego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny"]
margin_left = 100.0
margin_top = 64.0
margin_right = 164.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm_normalny" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny/Helm"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Normalny/Helm"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Helm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny"]
margin_left = 100.0
margin_top = 190.0
margin_right = 164.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata_normanly" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny/Klata"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Normalny/Klata"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Klata"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny"]
margin_left = 450.0
margin_top = 64.0
margin_right = 514.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie_Normalny" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny/Spodnie"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Normalny/Spodnie"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Spodnie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny"]
margin_left = 450.0
margin_top = 190.0
margin_right = 514.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty_normalny" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Normalny/Buty"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Normalny/Buty"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Buty
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elektryczny" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 680.0
margin_bottom = 644.0
rect_min_size = Vector2( 580, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nazwa" type="Label" parent="Background/ScrollContainer/VBoxContainer/Elektryczny"]
margin_left = 262.747
margin_top = 15.8919
margin_right = 378.747
margin_bottom = 29.8919
text = " Zbroja Typu Elektrycznego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny"]
margin_left = 100.0
margin_top = 64.0
margin_right = 164.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm_elektryczny" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Helm"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Helm"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Helm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny"]
margin_left = 100.0
margin_top = 190.0
margin_right = 164.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata_elektryczna" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Klata"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Klata"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Klata"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny"]
margin_left = 450.0
margin_top = 64.0
margin_right = 514.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie_elektryczne" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Spodnie"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 22 )

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Spodnie"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Spodnie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny"]
margin_left = 450.0
margin_top = 190.0
margin_right = 514.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty_elektryczne" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Buty"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Elektryczny/Buty"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Buty
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ogien" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 648.0
margin_right = 680.0
margin_bottom = 968.0
rect_min_size = Vector2( 580, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nazwa" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ogien"]
margin_left = 262.747
margin_top = 15.8919
margin_right = 378.747
margin_bottom = 29.8919
text = " Zbroja Typu Ognistego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien"]
margin_left = 100.0
margin_top = 64.0
margin_right = 164.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm_ogien" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien/Helm"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ogien/Helm"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Helm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien"]
margin_left = 100.0
margin_top = 190.0
margin_right = 164.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata_ogien" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien/Klata"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ogien/Klata"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Klata"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien"]
margin_left = 450.0
margin_top = 64.0
margin_right = 514.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie_ogien" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien/Spodnie"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 18 )

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ogien/Spodnie"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Spodnie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien"]
margin_left = 450.0
margin_top = 190.0
margin_right = 514.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty_ogien" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ogien/Buty"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ogien/Buty"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Buty
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Woda" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 972.0
margin_right = 680.0
margin_bottom = 1292.0
rect_min_size = Vector2( 580, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nazwa" type="Label" parent="Background/ScrollContainer/VBoxContainer/Woda"]
margin_left = 262.747
margin_top = 15.8919
margin_right = 378.747
margin_bottom = 29.8919
text = " Zbroja Typu Wodnego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda"]
margin_left = 100.0
margin_top = 64.0
margin_right = 164.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm_woda" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda/Helm"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Woda/Helm"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Helm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda"]
margin_left = 100.0
margin_top = 190.0
margin_right = 164.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata_woda" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda/Klata"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Woda/Klata"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Klata"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda"]
margin_left = 450.0
margin_top = 64.0
margin_right = 514.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie_woda" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda/Spodnie"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 15 )

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Woda/Spodnie"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Spodnie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda"]
margin_left = 450.0
margin_top = 190.0
margin_right = 514.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty_woda" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Woda/Buty"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Woda/Buty"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Buty
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ziemia" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 1296.0
margin_right = 680.0
margin_bottom = 1616.0
rect_min_size = Vector2( 580, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="Nazwa" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ziemia"]
margin_left = 262.747
margin_top = 15.8919
margin_right = 378.747
margin_bottom = 29.8919
text = " Zbroja Typu Ziemnego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia"]
margin_left = 100.0
margin_top = 64.0
margin_right = 164.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm_ziemia" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Helm"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Helm"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Helm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia"]
margin_left = 100.0
margin_top = 190.0
margin_right = 164.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata_ziemia" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Klata"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Klata"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Klata"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia"]
margin_left = 450.0
margin_top = 64.0
margin_right = 514.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie_ziemia" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Spodnie"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 3 )

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Spodnie"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Spodnie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia"]
margin_left = 450.0
margin_top = 190.0
margin_right = 514.0
margin_bottom = 254.0
rect_min_size = Vector2( 64, 64 )
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty_ziemia" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Buty"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
disabled = true
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Ziemia/Buty"]
margin_left = 74.0
margin_top = 26.0
margin_right = 138.0
margin_bottom = 40.0
text = "Buty
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="Background"]
margin_left = 204.0
margin_top = -303.0
margin_right = 582.0
margin_bottom = 303.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="TextureButton" parent="Background/Container"]
margin_left = 157.0
margin_top = 128.0
margin_right = 221.0
margin_bottom = 192.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm_posiadany" type="TextureButton" parent="Background/Container/Helm"]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata" type="TextureButton" parent="Background/Container"]
margin_left = 157.0
margin_top = 224.0
margin_right = 221.0
margin_bottom = 288.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Klata_posiadana" type="TextureButton" parent="Background/Container/Klata"]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie" type="TextureButton" parent="Background/Container"]
margin_left = 157.0
margin_top = 320.0
margin_right = 221.0
margin_bottom = 384.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spodnie_posiadne" type="TextureButton" parent="Background/Container/Spodnie"]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty" type="TextureButton" parent="Background/Container"]
margin_left = 157.0
margin_top = 416.0
margin_right = 221.0
margin_bottom = 480.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buty_posiadane" type="TextureButton" parent="Background/Container/Buty"]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Background"]
margin_left = 506.217
margin_top = -290.824
margin_right = 570.217
margin_bottom = -258.824
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Normalny/Helm/Helm_normalny" to="." method="_on_Helm_normalny_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Normalny/Klata/Klata_normanly" to="." method="_on_Klata_normanly_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Normalny/Spodnie/Spodnie_Normalny" to="." method="_on_Spodnie_Normalny_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Normalny/Buty/Buty_normalny" to="." method="_on_Buty_normalny_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Elektryczny/Helm/Helm_elektryczny" to="." method="_on_Helm_elektryczny_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Elektryczny/Klata/Klata_elektryczna" to="." method="_on_Klata_elektryczna_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Elektryczny/Spodnie/Spodnie_elektryczne" to="." method="_on_Spodnie_elektryczne_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Elektryczny/Buty/Buty_elektryczne" to="." method="_on_Buty_elektryczne_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ogien/Helm/Helm_ogien" to="." method="_on_Helm_ogien_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ogien/Klata/Klata_ogien" to="." method="_on_Klata_ogien_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ogien/Spodnie/Spodnie_ogien" to="." method="_on_Spodnie_ogien_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ogien/Buty/Buty_ogien" to="." method="_on_Buty_ogien_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Woda/Helm/Helm_woda" to="." method="_on_Helm_woda_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Woda/Klata/Klata_woda" to="." method="_on_Klata_woda_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Woda/Spodnie/Spodnie_woda" to="." method="_on_Spodnie_woda_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Woda/Buty/Buty_woda" to="." method="_on_Buty_woda_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ziemia/Helm/Helm_ziemia" to="." method="_on_Helm_ziemia_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ziemia/Klata/Klata_ziemia" to="." method="_on_Klata_ziemia_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ziemia/Spodnie/Spodnie_ziemia" to="." method="_on_Spodnie_ziemia_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Ziemia/Buty/Buty_ziemia" to="." method="_on_Buty_ziemia_pressed"]
[connection signal="pressed" from="Background/Exit" to="." method="_on_Exit_pressed"]
